Corrected footer spacing

--- a/less/style.less
+++ b/less/style.less
@@ -162,7 +162,7 @@
 
 .x2b-ftr {
   border-top: 1px solid @navbar-default-border;
-  margin-top: (@padding-large-vertical);
+  margin-top: (4 * @padding-large-vertical);
   padding: (4 * @padding-large-vertical) 0;
   text-align: center;
 }
